name:                hymaxion
synopsis:            do simulation things in Haskell
version:             0.0.1.0
homepage:            https://github.com/shapr/hymaxion
license:             BSD3
author:              Shae Erisson
maintainer:          Shae Erisson
copyright:           Shae Erisson
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Hymaxion
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5

executable hymaxion
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , hymaxion

test-suite hymaxion-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , hymaxion
                  , hedgehog
